--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,9 +19,10 @@
       font-size: 2rem;
       font-weight: lighter;
   }
-  .aboutP {
+  li {
+      text-align: center;
       font-family: unset;
-      font-size: 2.5rem;
+      font-size: 1.5rem;
       font-weight: lighter;
       font-stretch: wider;
   }
